feat(device_platform): 统一下发家庭有效家长策略
